--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "express": ""
+    "express": "",
+    "line-reader-sync": "^0.1.0"
   }
 }
