turned off debug mode

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "debug": true,
+  "debug": false,
   "debugPathToDataFiles": "C:/Users/colli/Workspace/testing/",
   "pathToDataFiles": "/media/usb/"
 }
